Fix font size on small devices

--- a/css/product.css
+++ b/css/product.css
@@ -56,7 +56,7 @@ body {
     border-spacing: 2em;
     /* width: 90vw; */
     padding: 2%;
-    font-size: 2em;
+    font-size: .9em;
     border: .1em solid rgba(0, 0, 0, .2);
     margin: 0;
     margin-bottom: 2em;
@@ -65,7 +65,7 @@ body {
     display: table;
     padding: 2%;
     padding: 2%;
-    font-size: 2em;
+    font-size: .9em;
     border: .1em solid rgba(0, 0, 0, .2);
 }
 }@media only screen and (max-width:600px) {
@@ -77,7 +77,7 @@ body {
     border-spacing: 2em;
     /* width: 80vw; */
     padding: 2%;
-    font-size: 2em;
+    font-size: 1.2em;
     border: .1em solid rgba(0, 0, 0, .2);
     margin: 0;
     margin-bottom: 2em;
@@ -86,7 +86,7 @@ body {
     display: table;
     padding: 2%;
     padding: 2%;
-    font-size: 2em;
+    font-size: 1.2em;
     border: .1em solid rgba(0, 0, 0, .2);
 }
 }@media only screen and (max-width:900px) {
@@ -98,7 +98,7 @@ body {
     border-spacing: 2em;
     /* width: 60vw; */
     padding: 2%;
-    font-size: 2em;
+    font-size: 1.5em;
     border: .1em solid rgba(0, 0, 0, .2);
     margin: 0;
     margin-bottom: 2em;
@@ -107,7 +107,7 @@ body {
     display: table;
     padding: 2%;
     padding: 2%;
-    font-size: 2em;
+    font-size: 1.5em;
     border: .1em solid rgba(0, 0, 0, .2);
 }
 }
